Translated description to slovak
Signed-off-by: hudecsamuel <hudecsamuel@gmail.com>

--- a/www/_mergado/description_sk_sk.html
+++ b/www/_mergado/description_sk_sk.html
@@ -1,16 +1,16 @@
 <div>
     <p>
-        Mergado Logbook je aplikace pro vedení zápisů o řízení inzerce, důležitých událostech, zkrátka o všem, co je dobré evidovat. Umožní Vám vést si poznámky přehledně a na jednom místě, takže je snadno dohledáte.
+        Mergado Logbook je aplikácia na vedenie zápisov o riadení inzercie, dôležitých udalostiach, skrátka o všetkom čo je dobré evidovať. Umožní vám prehľadne si viesť poznámky na jednom mieste, takže ich ľahko dohľadáte.
     </p>
     <h2>
-        Co umí Mergado Logbook
+        Čo dokáže Mergado Logbook
     </h2>
     <ul>
         <li>
-            Uložit zápisy do "projektového deníku".
+            Uložiť zápisy do "projektového denníku".
         </li>
         <li>
-            Každý zápis má datum kdy byl pořízen a následně jsou zápisy řazeny podle data.
+            Každý zápis má dátum kedy bol vyhotovený, podľa ktorého sú následne zápisy radené.
         </li>
         <li>
             Export do CSV.
@@ -18,17 +18,17 @@
     </ul>
 
     <h2>
-        Proč využít Mergado Logbook
+        Prečo využívať Mergado Logbook
     </h2>
     <ul>
         <li>
-            Jednoduchý a přehledný projektový deník.
+            Jednoduchý a pehľadný projektový denník.
         </li>
         <li>
-            Ušetříte práci při vedení poznámek.
+            Ušetríte prácu pri vedení poznámok.
         </li>
         <li>
-            Je zdarma.
+            Je zadarmo.
         </li>
     </ul>
 
