--- a/www/_mergado/description_cs_cz.html
+++ b/www/_mergado/description_cs_cz.html
@@ -32,4 +32,11 @@
         </li>
     </ul>
 
+    <h2>Ukázka</h2>
+    <ul class="image-list">
+        <li><a href="https://appcloud.mergado.com/apps/logbook.dev/_mergado/logbook-novy-zaznam.png" class="modal cboxElement" rel="screenshot"><img src="https://appcloud.mergado.com/apps/logbook.dev/_mergado/logbook-novy-zaznam-150.png" alt="Heureka Watchdog"></a></li>
+        <li><a href="https://appcloud.mergado.com/apps/logbook.dev/_mergado/logbook-seznam-exportu.png" class="modal cboxElement" rel="screenshot"><img src="https://appcloud.mergado.com/apps/logbook.dev/_mergado/logbook-seznam-exportu-150.png" alt="Heureka Watchdog"></a></li>
+        <li><a href="https://appcloud.mergado.com/apps/logbook.dev/_mergado/logbook-zaznamy-exportu.png" class="modal cboxElement" rel="screenshot"><img src="https://appcloud.mergado.com/apps/logbook.dev/_mergado/logbook-zaznamy-exportu-150.png" alt="Heureka Watchdog"></a></li>
+    </ul>
+
 </div>
